[package]
name = "rust-async"
version = "0.1.0"
authors = ["equk <equk@users.noreply.github.com>"]
edition = "2018"

[dependencies]
tokio = "0.1.19"
bytes = "0.4"
futures = "0.1.11"
httparse = "1.1.2"
log = "0.3.6"
net2 = "0.2"
time = "0.1"
tokio-core = "0.1.17"
tokio-io = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-minihttp = { git = "https://github.com/tokio-rs/tokio-minihttp" }